# Robotics_Basics

./: README.md
question_1_pkg/: CMakeLists.txt  README_1.md  installturtlebot3  package.xml
question_1_pkg/src/: keyboard_control.cpp
question_2_pkg/: CMakeLists.txt  README_2.md  package.xml
question_2_pkg/src/: sinusoidal_movement.cpp
question_3_pkg/: CMakeLists.txt  README_3.md  package.xml
question_3_pkg/src/: move.cpp
